# pytubemusic

./: CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
src/pytubemusic/: __main__.py  _utils.py  audio.py  logutils.py  track.py  utils.py
tests/: README.md  __init__.py  approvaltests_config.json  pytest.ini  requirements.txt  test_album.py  test_audio_streams.py  test_cover.py  test_image_streams.py  test_root.py  test_schemata.py  test_stream_utils.py  test_tags.py  test_track.py  test_track_data.py  test_utils.py  utils.py
tests/approvals/: test_album.an_album_can_be_created_with_a_single.approved.txt  test_cover.covers_can_be_pretty_printed.approved.txt  test_root.root_user_model_can_parse_a_merge_track.approved.txt  test_root.root_user_model_can_parse_a_playlist.approved.txt  test_root.root_user_model_can_parse_a_single.approved.txt  test_root.root_user_model_can_parse_album.approved.txt  test_tags.tags_are_pretty_printed.approved.txt  test_track.merge_playlist_tracks_can_be_dropped.approved.txt  test_track.merge_playlists_can_be_created_with_full_data.approved.txt  test_track.playlist_tracks_can_be_dropped.approved.txt  test_track.playlist_tracks_can_be_merged.approved.txt  test_track.singles_can_be_created_with_minimal_data.approved.txt  test_track.split_tracks_can_be_created_with_full_data.approved.txt  test_track.split_tracks_can_be_created_with_minimal_data.approved.txt  test_track_data.albums_can_be_converted_to_track_data.approved.txt  test_track_data.an_album_containing_skipped_playlist_tracks_yields_correct_track_numbers.approved.txt  (+3 more)
(+62 files in other folders)
