[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytubemusic"
version = "0.0.1a3"
description = 'A cli that may or may not download albums from a certain website'

readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/James-Ansley/pytubemusic"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pytubemusic = "pytubemusic:__main__"
